--- a/.github/workflows/build_push.yml
+++ b/.github/workflows/build_push.yml
@@ -26,6 +26,6 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: ./pyenv_python
-          platforms: linux/amd64,linux/arm
+          platforms: linux/amd64,linux/arm, linux/arm64
           push: true
           tags: tomasad/pyenv_python:latest
