--- a/.github/workflows/build_push.yml
+++ b/.github/workflows/build_push.yml
@@ -19,8 +19,10 @@ jobs:
         name: Login to DockerHub
         uses: docker/login-action@v1 
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          registry: ghcr.io
+          username: ${{github.actor}}
+          password: ${{secrets.GITHUB_TOKEN}}
+          
       -
         name: Build and push
         uses: docker/build-push-action@v2
