--- a/.github/workflows/build_push.yml
+++ b/.github/workflows/build_push.yml
@@ -16,7 +16,7 @@ jobs:
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       -
-        name: Login to DockerHub
+        name: Login to GHRC
         uses: docker/login-action@v1 
         with:
           registry: ghcr.io
@@ -28,6 +28,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: ./pyenv_python
-          platforms: linux/amd64,linux/arm, linux/arm64
+          platforms: linux/amd64
+          # platforms: linux/amd64,linux/arm, linux/arm64
           push: true
-          tags: tomasad/pyenv_python:latest
+          tags: pyenv_python:latest
