--- a/.github/workflows/build_push.yml
+++ b/.github/workflows/build_push.yml
@@ -2,33 +2,49 @@ name: Build and push `pyenv_python` image
 
 on: [workflow_dispatch]
 
+env:
+  IMAGE_NAME: ghcr.io/espressif/github-esp-dockerfiles/pyenv_python
+  # IMAGE_TAG:
+  # IMAGE_CONTEXT:
+  # IMAGE_PRATFORMS: 
+
 jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Checkout
+      - name: Checkout
         uses: actions/checkout@v2
-      -
-        name: Set up QEMU
+
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
-      -
-        name: Set up Docker Buildx
+
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-      -
-        name: Login to GHRC
+
+      - name: Login to GHRC
         uses: docker/login-action@v1 
         with:
           registry: ghcr.io
           username: ${{github.actor}}
           password: ${{secrets.GITHUB_TOKEN}}
           
-      -
-        name: Build and push
+
+      - name: Build and Load
+        uses: docker/build-push-action@v2
+        with:
+          context: ./pyenv_python
+          platforms: linux/amd64
+          load: true
+          tags: ${{env.IMAGE_NAME}}
+
+      - name: Test Image
+        run: docker run --rm ${{env.IMAGE_NAME}}
+
+      - name: Build and Push
         uses: docker/build-push-action@v2
         with:
           context: ./pyenv_python
           platforms: linux/amd64
           # platforms: linux/amd64,linux/arm, linux/arm64
           push: true
-          tags: pyenv_python:latest
+          tags: ${{env.IMAGE_NAME}}
