--- a/.github/workflows/build_image_pyenv_python.yml
+++ b/.github/workflows/build_image_pyenv_python.yml
@@ -39,22 +39,13 @@ jobs:
           username: ${{github.actor}}
           password: ${{secrets.GITHUB_TOKEN}}
 
-      - name: Build and Load
+      - name: Build and push image
         uses: docker/build-push-action@v2
         with:
           context: ${{env.IMAGE_DIR}}
           platforms: ${{env.IMAGE_ARCHS}}
           tags: ${{env.IMAGE_NAME}}:${{env.IMAGE_TAG}}
-
-      - name: Test Image
-        run: docker run --rm ${{env.IMAGE_NAME}}:${{env.IMAGE_TAG}}
-
-      # Push only when merged to master; cached form 'Build and Load' step
-      - name: Build and Push
-        if: ${{ github.ref == 'refs/heads/master' }}
-        uses: docker/build-push-action@v2
-        with:
-          context: ${{env.IMAGE_DIR}}
-          platforms: ${{env.IMAGE_ARCHS}}
-          push: true
-          tags: ${{env.IMAGE_NAME}}:${{env.IMAGE_TAG}}
+          # Push package to registry only when merged to master
+          push: ${{ github.event_name != 'pull_request' }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
