fix: Enabled image push only from master and wf dispatch

--- a/.github/workflows/build_image_target-test-base_jammy-py.yml
+++ b/.github/workflows/build_image_target-test-base_jammy-py.yml
@@ -121,7 +121,6 @@ jobs:
           build-args: |
             PYTHON_VERSION=${{ env.PYTHON_VERSION }}
             PYTHON_VERSION_MM=${{ env.PYTHON_VERSION_MM }}
-          push: true #TODO: remove this for production
-          # push: ${{ github.event_name != 'pull_request' }}
+          push: ${{ github.event_name != 'pull_request' }}
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
